Simons: Pleidooi van een screenreadergebruiker

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -194,6 +194,10 @@
         <a href="https://axesslab.com/switches/">Assistive Technologies – The Switch</a>,
         <i class="website">Axess Lab</i>, 19.02.2018.
       </li>
+      <li>Simons, Bart:
+        <a href="http://www.anysurfer.be/nl/blog/detail/pleidooi-van-een-screenreadergebruiker-overdrijf-niet" hreflang="nl" lang="nl">Pleidooi van een screenreadergebruiker: overdrijf niet</a>,
+        <i class="website">AnySurfer</i>, 11.07.2018.
+      </li>
     </ul>
 
     <h2>Page Structure</h2>
