h3: Mathematical and Scientific Formulas

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -310,6 +310,14 @@
       <!-- Borrowing Ready-Made Widgets from HTML: https://oreillymedia.github.io/Using_SVG/extras/ch18-hidden-input.html (Using SVG with CSS3 and HTML5 — Supplementary Material. O'Reilly Media) -->
     </ul>
 
+    <h3>Mathematical and Scientific Formulas</h3>
+    <ul>
+      <li>Gillen, Mary:
+        <a href="http://accessiblewebsiteservices.com/why-mathml-should-be-used-for-equations/">Math<abbr>ML</abbr>: Tutorials for Accessible Math Markup</a>,
+        <i class="website">&lt;accessible-website-services&gt;</i>, 21.08.2017.
+      </li>
+    </ul>
+
     <h2>Hyperlinks and Navigation</h2>
     <ul>
       <li>Roselli, Adrian:
