Pickering: Inclusive Components

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -593,6 +593,14 @@
 
     <h3>Other User Interface Components or Widgets</h3>
     <ul>
+      <li>
+        <a href="https://inclusive-components.design/">Inclusive Components</a>
+        by Heydon Pickering is
+        <q>[a] blog trying to be a pattern library. All about designing inclusive web interfaces, piece by piece.</q>
+        Some of the components are also listed below.
+        (See also <a href="http://heydonworks.com/practical_aria_examples/"><abbr>ARIA</abbr> Examples</a>,
+        which contains older examples written in jQuery.)
+      </li>
       <li>Pickering, Heydon:
         <a href="https://inclusive-components.design/a-content-slider/">A Content Slider</a>,
         <i class="website">Inclusive Components</i>, 22.11.2017.
