Leventhal, Dodson: Why authors should avoid aria-relevant

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -687,6 +687,10 @@
         <a href="https://assortment.io/posts/accessible-modal-component-react-portals-part-2">Building an accessible Modal component with React Portals: Part 2</a>,
         <i class="website">Assortment</i>, 07.06.2018.
       </li>
+      <li>Leventhal, Aaron; Dodson, Rob:
+        <a href="https://medium.com/dev-channel/why-authors-should-avoid-aria-relevant-5d3164fab1e3">Why authors should avoid aria-relevant</a>,
+        <i class="blog">Dev Channel (Medium)</i>, 11.04.2018.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
