Panchang: Aria-required=true

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -691,6 +691,10 @@
         <a href="https://medium.com/dev-channel/why-authors-should-avoid-aria-relevant-5d3164fab1e3">Why authors should avoid aria-relevant</a>,
         <i class="blog">Dev Channel (Medium)</i>, 11.04.2018.
       </li>
+      <li>Panchang, Sailesh:
+        <a href="https://www.deque.com/blog/aria-requiredtrue-wcag-2-compliance-practice/">Aria-required=true: <abbr>WCAG</abbr> 2 Compliance versus Best Practice</a>,
+        <i class="blog">Deque blog</i>, 05.12.2013.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
