Watson: Using HTML lists

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -854,6 +854,10 @@
         <a href="http://html.cita.illinois.edu/nav/list/">List Overview</a>,
         <i class="website"><abbr title="Illinois Center for Information Technology and Web Accessibility">ICITA</abbr></i> (no date).
       </li>
+      <li>Watson, Léonie:
+        <a href="https://www.nomensa.com/blog/2011/using-html-lists">Using <abbr>HTML</abbr> lists</a>,
+        <i class="blog">Humanising Technology Blog</i>, 08.03.2011.
+      </li>
     </ul>
 
     <h2>Web Accessibility Books</h2>
