Rutter: Lists, lists & more lists

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -858,6 +858,12 @@
         <a href="https://www.nomensa.com/blog/2011/using-html-lists">Using <abbr>HTML</abbr> lists</a>,
         <i class="blog">Humanising Technology Blog</i>, 08.03.2011.
       </li>
+      <li>Rutter, Richard:
+        <a href="http://clagnut.com/blog/153">Lists, lists &amp; more lists</a>,
+        <i class="blog">Clagnut</i>, 27.01.2003.
+        <br />This blog post is interesting from a &ldquo;historical&rdquo; point of view
+        because it contains screenshots of AvantGo on a Palm Vx.
+      </li>
     </ul>
 
     <h2>Web Accessibility Books</h2>
