Wild: Making Accessible Links

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -365,6 +365,10 @@
         <i class="blog">Deque blog</i>, 29.06.2016.
         This article is also relevant to keyboard focus in form fields.
       </li>
+      <li>Wild, Gian:
+        <a href="https://www.sitepoint.com/15-rules-making-accessible-links/">Making Accessible Links: 15 Golden Rules For Developers</a>,
+        <i class="website">SitePoint</i>, 20.02.2014.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
