--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -369,6 +369,12 @@
         <a href="https://www.sitepoint.com/15-rules-making-accessible-links/">Making Accessible Links: 15 Golden Rules For Developers</a>,
         <i class="website">SitePoint</i>, 20.02.2014.
       </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible">:focus-visible</a>,
+        <i class="website"><abbr>MDN</abbr></i>, 02.07.2018.
+        <br />Focus visibility is relevant both to links and to user interface components.
+        This article focuses on form elements and custom elements.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
