Sethfors: Your skip links are broken

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -375,6 +375,10 @@
         <br />Focus visibility is relevant both to links and to user interface components.
         This article focuses on form elements and custom elements.
       </li>
+      <li>Sethfors, Hampus:
+        <a href="https://axesslab.com/skip-links/">Your skip links are broken</a>,
+        <i class="website">Axess Lab</i>, 21.06.2018.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
