Thompson: Accessible Dropdown Menus Revisited

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -396,6 +396,10 @@
         <a href="https://github.com/adobe-accessibility/Accessible-Mega-Menu">Accessible Mega Menu on GitHub</a>
         (Apache 2.0 licence).
       </li>
+      <li>Thompson, Terrill:
+        <a href="http://terrillthompson.com/blog/474">Accessible Dropdown Menus Revisited</a>,
+        <i class="blog">Terrill Thompson</i>, 02.12.2013.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
