Kravets: Solved with CSS! Dropdown Menus

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -400,6 +400,18 @@
         <a href="http://terrillthompson.com/blog/474">Accessible Dropdown Menus Revisited</a>,
         <i class="blog">Terrill Thompson</i>, 02.12.2013.
       </li>
+      <li>Kravets, Una:
+        <a href="https://css-tricks.com/solved-with-css-dropdown-menus/">Solved with <abbr>CSS</abbr>! Dropdown Menus</a>,
+        <i class="website"><abbr>CSS</abbr> Tricks</i>, 01.05.2018.
+        <br />The <abbr>CSS</abbr> code in this article relies on the
+        <a href="https://drafts.csswg.org/selectors-4/#the-focus-within-pseudo">pseudo-class <code>:focus-within</code></a>
+        in the Selectors Level 4 specification, which was only a draft specification at the time of writing.
+        See <a href="https://css-tricks.com/solved-with-css-dropdown-menus/#comment-1631964">Marcy Sutton's comment</a>
+        on the additional work that is required for accessibility. See also
+        <a href="https://css-tricks.com/solved-with-css-dropdown-menus/#comment-1632414">Andrea Fercia's comment</a>
+        about issues with tabbing backwards.
+        <!--@@check accessibility!!-->
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
