Coyier: Wrapup of Navigation in Lists

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -418,6 +418,16 @@
         <br />This article takes Marcy Sutton's comments on Una Kravets' article into account.
         <!--@@read and test!!-->
       </li>
+      <!--Recommended WAI-ARIA implementation for navigation bar/menu: https://stackoverflow.com/q/12279113/6002174 - @@needs up-to-date answer!-->
+      <li>Coyier, Chris:
+        <a href="https://css-tricks.com/wrapup-of-navigation-in-lists/">Wrapup of Navigation in Lists</a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 04.02.2013.
+        <br />An
+        <a href="https://css-tricks.com/navigation-in-lists-to-be-or-not-to-be/" title="Navigation in Lists: To Be or Not To Be">earliler article by Chris Coyier</a>
+        about lists provoked a respose from Dennis Lembree:
+        <a href="http://www.webaxe.org/leave-accessibility-to-experts-please/">Leave Accessibility to the Experts Please</a>
+        (01.02.2013).
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
