Garaventa: Creating Accessible Menus and Mega Menus

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -400,6 +400,10 @@
         <a href="http://terrillthompson.com/blog/474">Accessible Dropdown Menus Revisited</a>,
         <i class="blog">Terrill Thompson</i>, 02.12.2013.
       </li>
+      <li>Garaventa, Bryan:
+        <a href="https://www.levelaccess.com/challenges-mega-menus-standard-menus-make-accessible/">Creating Accessible Menus and Mega Menus</a>,
+        <i class="website">Level Access</i>, 09.02.2018.
+      </li>
       <li>Kravets, Una:
         <a href="https://css-tricks.com/solved-with-css-dropdown-menus/">Solved with <abbr>CSS</abbr>! Dropdown Menus</a>,
         <i class="website"><abbr>CSS</abbr> Tricks</i>, 01.05.2018.
