WAI: Fly-out Menus

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -400,6 +400,10 @@
         <a href="http://terrillthompson.com/blog/474">Accessible Dropdown Menus Revisited</a>,
         <i class="blog">Terrill Thompson</i>, 02.12.2013.
       </li>
+      <li>
+        <a href="https://www.w3.org/WAI/tutorials/menus/flyout/">Fly-out Menus </a>,
+        <i class="website">Web Accessibility Initiative: Web Accessibility Tutorials</i>, last updated on 23.08.2018.
+      </li>
       <li>Garaventa, Bryan:
         <a href="https://www.levelaccess.com/challenges-mega-menus-standard-menus-make-accessible/">Creating Accessible Menus and Mega Menus</a>,
         <i class="website">Level Access</i>, 09.02.2018.
