--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -154,7 +154,7 @@
       </li>
       <li>
         <a href="https://www.tu-chemnitz.de/urz/www/bf/" hreflang="de" lang="de">Hinweise für barrierefreies Webdesign</a>,
-        <i class="website" lang="de">Universitäts­rechen­zentrum, Technische Universität Chemnitz</i> (no date).
+        <i class="website" lang="de">Universitätsrechenzentrum, Technische Universität Chemnitz</i> (no date).
         <br />Guidance that briefly covers document titles, structure elements (headings, paragraphs, lists),
         link text, text alternatives for images, contrast, multimdia, instructions and readability.
       </li>
