W3C WAI (Printable) Glossary

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1083,6 +1083,11 @@
         <a href="https://www.taubenschlag.de/" hreflang="de" lang="de">Taubenschlag</a>:
         a German website for people who are deaf or hard of hearing.
       </li>
+      <li>
+        <a href="https://www.w3.org/WAI/GL/Glossary/printable.html"><abbr>WAI</abbr> (Printable) Glossary</a>,
+        last updated in 01.03.2003.
+      </li>
+      <!--@@more: https://duckduckgo.com/?q=%22Accessibility+Maturity+Model%22+%22Business+Disability+Forum%22&t=ffab&ia=web -->
       <!--
       <li>
         <a href=""></a>
