--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -323,6 +323,10 @@
         <a href="http://www.icdri.org/technology/ecceff.htm">The Electronic Curb-Cut Effect</a>,
         <i class="website"><abbr title="International Center for Disability Resources on the Internet">ICDRI</abbr></i>, 1998.
       </li>
+      <li>Jacobs, Steve:
+        <a href="http://www.accessiblesociety.org/topics/technology/eleccurbcut.htm">Section 255 of the Telecommunications Act of 1996: Fueling the Creation of New Electronic Curbcuts</a>,
+        <i class="website">The Center for an Accessible Society</i>, 1999.
+      </li>
       <li>
         <a href="https://docs.microsoft.com/en-us/microsoft-edge/accessibility/design">Designing Accessible Websites</a>,
         <i class="website">Microsoft</i>, 06.02.2017.
