Treviranus: Integrating Accessibility and Design

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -328,6 +328,10 @@
         <i class="website">The Center for an Accessible Society</i>, 1999.
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=YFMzTSiO17s">Integrating Accessibility and Design: Five Hot Tips for Start-ups</a>,
+        (MaRS Entrepreneurship Programs on YouTube, 07.04.2011, 5 minutes): short interview with Jutta Treviranus.
+      </li>
+      <li>
         <a href="https://docs.microsoft.com/en-us/microsoft-edge/accessibility/design">Designing Accessible Websites</a>,
         <i class="website">Microsoft</i>, 06.02.2017.
       </li>
