--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -491,6 +491,10 @@
         <i class="website">European Commission: Digital Single Market</i>, 21.03.2018.
         <!--@@check study-->
       </li>
+      <li>Christopherson, Robin:
+        <a href="https://www.abilitynet.org.uk/news-blogs/government-identifies-body-enforce-website-accessibility">Government identifies body to enforce website accessibility - now will they step up to the task?</a>,
+        <i class="blog">AbilityNet blog</i>, 07.08.2018.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
