--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1045,6 +1045,11 @@
         <a href="https://blog.prototypr.io/going-colorblind-an-experiment-in-empathy-and-accessibility-98b7003737ca">Going Colorblind: An Experiment in Empathy and Accessibility</a>,
         <i class="blog">Prototypr on Medium</i>, 02.04.2018 (seven-minute read).
       </li>
+      <li>Walls, Ashley:
+        <a href="https://medium.com/microsoft-design/bringing-inclusive-practices-to-product-design-e8bd37dd1682">Bringing Inclusive Practices to Product Design</a>,
+        <i class="blog">Microsoft Design on Medium</i>, 30.08.2018 (four-minute read).
+        <br />While the blog post acknowledges diversity in users, it does not mention people with disabilities.
+      </li>
       <!--@@section testing/evaluation-->
       <li>Brajnik, Giorgio:
         <a href="https://users.dimi.uniud.it/~giorgio.brajnik/projects/bw/">An accessibility evaluation method based on Barrier Walkthrough</a>.
