--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1116,6 +1116,19 @@
         <a href="https://www.taubenschlag.de/" hreflang="de" lang="de">Taubenschlag</a>:
         a German website for people who are deaf or hard of hearing.
       </li>
+      <li>Rello, Luz; Baeza-Yates, Ricardo:
+        <a href="https://dl.acm.org/citation.cfm?id=2513447">Good fonts for dyslexia</a>,
+        <i class="proceedings"><abbr>ASSETS</abbr> '13: Proceedings of the 15th International <abbr>ACM</abbr> <abbr>SIGACCESS</abbr> Conference on Computers and Accessibility,
+        Article <abbr>No.</abbr> 14.
+        <br />Abstract (published by <abbr>ACM</abbr>):
+        <blockquote>Around 10% of the people have dyslexia, a neurological disability that impairs a person's ability to read and write.
+          There is evidence that the presentation of the text has a significant effect on a text's accessibility for people with dyslexia.
+          However, to the best of our knowledge, there are no experiments that objectively measure the impact of the font type on reading performance.
+          In this paper, we present the first experiment that uses eye-tracking to measure the effect of font type on reading speed.
+          Using a within-subject design, 48 subjects with dyslexia read 12 texts with 12 different fonts.
+          Sans serif, monospaced and roman font styles significantly improved the reading performance over serif, proportional and italic fonts.
+          On the basis of our results, we present a set of more accessible fonts for people with dyslexia.</blockquote>
+      </li>
       <li>Business Disability Forum:
         <a href="https://members.businessdisabilityforum.org.uk/resource-category/resource/accessible-technology-charter-accessibility-maturity-model/">Accessible Technology Charter: Accessibility Maturity Model</a>.
       </li>
