Knight: Cognitive Accessibility 101 - Part 1

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -393,6 +393,14 @@
       </li>
     </ul>
 
+    <h2>Cognitive Disabilities</h2>
+    <ul>
+      <li>Knight, Jamie:
+        <a href="http://jkg3.com/Journal/cognitive-accessibility-101-part-1-what-is-cognitive-accessibility">Cognitive Accessibility 101 - Part 1: What is Cognitive Accessibility</a>,
+        <i class="website">Jamie &amp; Lion</i>, 2015.
+      </li>
+    </ul>
+
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
     <h3>European Union</h3>
     <!-- Legislation and policy:
