Knight: Cognitive Accessibility 101 - Part 2

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -399,6 +399,10 @@
         <a href="http://jkg3.com/Journal/cognitive-accessibility-101-part-1-what-is-cognitive-accessibility">Cognitive Accessibility 101 - Part 1: What is Cognitive Accessibility</a>,
         <i class="website">Jamie &amp; Lion</i>, 2015.
       </li>
+      <li>Knight, Jamie:
+        <a href="http://jkg3.com/Journal/cognitive-accessibility-101-part-2-how-it-effects-me-the-tools-i-use">Cognitive Accessibility 101 - Part 2: How it effects me &amp; the tools I use</a>,
+        <i class="website">Jamie &amp; Lion</i>, 2015.
+      </li>
     </ul>
 
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
