Gregory: Designing for Cognitive Differences

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -403,6 +403,10 @@
         <a href="http://jkg3.com/Journal/cognitive-accessibility-101-part-2-how-it-effects-me-the-tools-i-use">Cognitive Accessibility 101 - Part 2: How it effects me &amp; the tools I use</a>,
         <i class="website">Jamie &amp; Lion</i>, 2015.
       </li>
+      <li>Gregory, Brandon:
+        <a href="https://alistapart.com/article/designing-for-cognitive-differences">Designing for Cognitive Differences</a>,
+        <i class="website">A List Apart</i>, 16.10.2018.
+      </li>
     </ul>
 
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
