Rello, Subirats, Bigham: An online chess game designed for people with dyslexia

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -287,6 +287,21 @@
         Lecture Notes in Computer Science. Springer, 2006.
         <!--@@download-->
       </li>
+      <li>Rello, Luz; Subirats, Sergi; Bigham, Jeffrey P.:
+        <a href="https://dl.acm.org/citation.cfm?doid=2899475.2899479">An online chess game designed for people with dyslexia</a>,
+        <i class="proceedings"><abbr>W4A</abbr> '16: Proceedings of the 13th Web for All Conference</i>, Montreal, Canada, 11 &mdash; 13 April, 2016, Article <abbr>No.</abbr> 28.
+        <br />Abstract (published by <abbr>ACM</abbr>:
+        <blockquote>Teaching chess to students with learning disabilities has been shown to benefit their school performance in unrelated domains.
+          At the same time, chess involves skills that are highly correlated with dyslexia, such as visuospatial and calculation abilities.
+          In this paper, we created a online chess game designed for people with dyslexia and seek to understand whether people with dyslexia learn and play chess online in ways that differ from other students and whether such differences may be leveraged to improve classroom performance.
+          To test how people with dyslexia learn to play chess we carried out a within-subject experiment with 62 participants, 31 of them with diagnosed dyslexia.
+          Participants used an instrumented web-based chess learning platform that we developed to (i) complete lessons on how to play chess and about chess theory, (ii) work through exercises designed to test and reaffirm their skills, and (iii) play chess against a computer opponent.
+          We could not find significant differences on four dependent measures out of the twelve measures we collected.
+          Therefore, dyslexia might have an impact on how people learn and play chess using a computer, suggesting that chess may be useful as a fun way to help people with dyslexia improve their abilities.
+        </blockquote>
+        There is a <a href="https://youtu.be/xPGa9Cbl1QE?t=1177" title="Presentation of 'An online chess game designed for people with dyslexia'">video recording of the conference presentation</a> on YouTube.
+        <!--@@download: https://www.cs.cmu.edu/~jbigham/pubs/pdfs/2016/dyslexia-chess.pdf -->
+      </li>
     </ul>
 
 
