Millard: Should Games Always Be Accessible?

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -242,6 +242,18 @@
         <a href="https://www.technologyreview.com/s/611375/the-secret-world-of-disabled-gamers/amp/">The secret world of disabled gamers</a>,
         <i class="website"><abbr>MIT</abbr> Technology Review</i>, 03.07.2018.
       </li>
+      <li>Millard, Adam:
+        <a href="https://www.youtube.com/watch?v=aZ9-PHbiEvs">Should Games Always Be Accessible?</a>
+        (Adam Millard - The Architect of Games on YouTube, 14 minutes, 21.05.2018).
+        <br />Millard defines accessibility as follows:
+        <q cite="https://youtu.be/aZ9-PHbiEvs?t=37s">Accessibility is how easy a game is to engage with either on a physical
+          or mental level: how easy it is to understand, how easy it is to translate what you want to do into the game,
+          and how easy it is to tell what's going on. (&hellip;)
+          A game that is harder to engage with makes you work for your enjoyment,
+          but that effort or suffering often brings with it a much more precise and impactful vision.
+          This of course doesn't include disability-related accessibility stuff,
+          like colourblind modes and alternate control schemes, which are pretty much always a good idea.</q>
+      </li>
     </ul>
 
 
