Brown: Making Games Better for the Deaf and Hard of Hearing

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -254,6 +254,10 @@
           This of course doesn't include disability-related accessibility stuff,
           like colourblind modes and alternate control schemes, which are pretty much always a good idea.</q>
       </li>
+      <li>Brown, Mark:
+        <a href="https://www.youtube.com/watch?v=4NGe4dzlukc">Making Games Better for the Deaf and Hard of Hearing | Designing for Disability</a>
+        (Mark Brown on YouTube, 13 minutes, 16.07.2018).
+      </li>
     </ul>
 
 
