Brown: Making Games Better for Gamers with Colourblindness and Low Vision

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -258,6 +258,10 @@
         <a href="https://www.youtube.com/watch?v=4NGe4dzlukc">Making Games Better for the Deaf and Hard of Hearing | Designing for Disability</a>
         (Mark Brown on YouTube, 13 minutes, 16.07.2018).
       </li>
+      <li>Brown, Mark:
+        <a href="https://www.youtube.com/watch?v=xrqdU4cZaLw">Making Games Better for Gamers with Colourblindness &amp; Low Vision | Designing for Disability</a>
+        (Mark Brown on YouTube, 14 minutes, 22.08.2018).
+      </li>
     </ul>
 
 
