--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -131,6 +131,11 @@
         eGovMon project in Norway.
         <!--@@download-->
       </li>
+      <li>Thompson, Terrill:
+        <a href="http://terrillthompson.com/blog/517">Converting Word to <abbr>PDF</abbr> or <abbr>HTML</abbr>: Options for Accessibility</a>,
+        <i class="blog">Terrill Thompson's blog</i>, 30.06.2014.
+        <br />This blog post is now a bit old; since 2014, Microsoft Word 2016 and several new versions of LibreOffice have been released.
+      </li>
     </ul>
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
