Lexdis: Making Word Processing Document Accessible

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -136,6 +136,10 @@
         <i class="blog">Terrill Thompson's blog</i>, 30.06.2014.
         <br />This blog post is now a bit old; since 2014, Microsoft Word 2016 and several new versions of LibreOffice have been released.
       </li>
+      <li>
+        <a href="https://www.lexdis.org.uk/guides/making-microsoft-word-documents-accessible/">Making Word Processing Documents Accessible</a>,
+        <i class="website">Lexdis</i> (no date).
+      </li>
     </ul>
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
