Thompson: Handling Captions via the YouTube Player API

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -284,6 +284,10 @@
         <a href="http://joeclark.org/access/captioning/">Captioning</a>
         (links to Joe Clark's writing about captioning; not updated since 2007).
       </li>
+      <li>Thompson, Terrill:
+        <a href="http://terrillthompson.com/blog/648">Handling Captions via the YouTube Player <abbr>API</abbr></a>,
+        <i class="blog">Terrill Thompson</i>, 13.04.2015.
+      </li>
     </ul>
 
     <h3 id="audio-description">Audio Description</h3>
