See also Pally.org. Heydon: REVENGE.CSS

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -159,6 +159,9 @@
         <a href="https://nodejs.org/">Node.js</a> and 
         <a href="http://phantomjs.org/">PhantomJS</a>.
         (Licence: <a href="https://github.com/pa11y/pa11y/blob/master/LICENSE"><abbr>GNU</abbr> <abbr title="Lesser General Public License">LGPL</abbr> 3.0</a>.)
+        See also the website
+        <a href="http://pa11y.org/">Pa11y.org</a> and the
+        <a href="https://stackoverflow.com/questions/tagged/pa11y">questions tagged <code>pa11y</code> on Stack Overflow</a>.
       </li>
       <li><a href="http://hiis.isti.cnr.it:8880/MauveWeb/"><abbr>MAUVE</abbr>: Multiguideline Accessibility and Usability Validation Environment</a>.
       </li>
@@ -512,7 +515,11 @@
         <q>which allows the user to test for common errors in a page's markup</q>.
         (Licence: undefined.)
       </li>
-      <!-- 
+      <li>Heydon:
+        <a href="https://github.com/Heydon/REVENGE.CSS">REVENGE.CSS</a>:
+        <q>A <abbr>CSS</abbr> bookmarklet that puts pink error boxes (with messages in comic sans) everywhere you write bad <abbr>HTML</abbr></q>.
+      </li>
+      <!--
       <li>
         <a href=""></a>
       </li>
