axe: the Accessibility Engine

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -181,6 +181,13 @@
         on Udacity.
       </li>
       <li>
+        <a href="https://www.deque.com/axe/">axe: the Accessibility Engine</a>:
+        <!--Old URL: https://www.axe-core.org/-->
+        <q>Axe is an open source rules library for accessibility testing</q>.
+        See <a href="https://github.com/dequelabs/axe-core">axe-core on GitHub</a>
+        (Mozilla Public License 2.0).
+      </li>
+      <li>
         <a href="https://github.com/trentmwillis/ember-a11y-testing">Ember A11y Testing</a> (available under the <abbr>MIT</abbr> licence)
         <q>is a wrapper around <a href="https://github.com/dequelabs">Deque Labs'</a> 
           <a href="https://github.com/dequelabs/axe-core">axe-core</a> accessibility testing engine. It integrates into your testing environment with a simple <code>a11yAudit()</code> helper.</q>
