--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -417,6 +417,13 @@
         <a href="https://github.com/nvkelso/color-oracle-java"><span lang="en-US">Color Oracle&rsquo;s</span> 
         source code</a> is available on GitHub under the <span lang="en-US"><abbr>MIT</abbr> License</span>.
       </li>
+      <li>
+        <a href="https://michelf.ca/projects/sim-daltonism/">Sim Daltonism</a>:
+        <q>The color blindness simulator</q>.
+        This simulator, developed by Michel Fortin, is available for i<abbr>OS</abbr> and Mac <abbr>OS</abbr>.
+        The source code is available under the terms of the <span lang="en-US">Apache 2.0 License</span> in the
+        <a href="https://github.com/michelf/sim-daltonism/">sim-daltonism GitHub repository</a>.
+      </li>
       <li>Lea Verou&rsquo;s
         <a href="http://leaverou.github.io/contrast-ratio/">Contrast Ratio</a>
         is another tool for checking the contrast of web colours.
