Full URLs to style sheets

--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@ permalink: /404.html
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Page not found! | Accessibility Resources</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <link rel="stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/stuttgartbib.css" title="default" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/meiert-qa.css" title="QA stylesheet" />
   <!-- custom 404 page, as explained at https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/ -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
