--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -231,6 +231,10 @@
         <a href="http://jubler.org/">Jubler Subtitle Editor</a>:
         open-source tool developed in Java.  (Licence: <abbr>GPL</abbr>.)
       </li>
+      <li>
+        <a href="https://github.com/helixarch/subedit">subedit</a>:
+        a command line subtitle editor for the Bash shell. It works mainly with the SubRip (srt) format.
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
