MDN: Adding captions and subtitles ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -235,6 +235,10 @@
         <a href="https://github.com/helixarch/subedit">subedit</a>:
         a command line subtitle editor for the Bash shell. It works mainly with the SubRip (srt) format.
       </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Apps/Fundamentals/Audio_and_video_delivery/Adding_captions_and_subtitles_to_HTML5_video">Adding captions and subtitles to <abbr>HTML</abbr>5 video</a>,
+        <i class="website"><abbr>MDN</abbr> Web Docs</i>, no date.
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
