Link to ETSI standard

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>Accessibility Guidelines | Accessibility Resources</title>
+  <title>Accessibility Guidelines and Standards | Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative style sheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA style sheet" />
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1><span class="h1txt">Accessibility Guidelines</span></h1>
+    <h1><span class="h1txt">Accessibility Guidelines and Standards</span></h1>
   </header>
 
   <nav>
@@ -162,8 +162,7 @@
         <a href="https://www.w3.org/Translations/WCAG20-fr/" hreflang="fr" lang="fr">Règles pour l'accessibilité des contenus Web (<abbr>WCAG</abbr>) 2.0</a> (French).)<br />
         <br />Since the publication of <abbr>WCAG</abbr> 2.1 in June 2018,
         the older version of the guidelines is strictly speaking out of date,
-        but since many resources, including the European standard
-        <a href="http://www.etsi.org/deliver/etsi_en/301500_301599/301549/01.01.01_60/en_301549v010101p.pdf"><abbr>EN</abbr> 301 549</a>,
+        but since many resources
         are still based on the older version, a transition period will be necessary.
         <br />Several other resources accompanied these <abbr>WCAG</abbr> 2.0:
         <ul>
