Onsman: Intopia Launches ...

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -83,6 +83,11 @@
             <a href="https://www.levelaccess.com/wcag-2-1-replace-2-0-organizations-adopt-2-1/">Does <abbr>WCAG</abbr> 2.1 Replace 2.0? When Should You Adopt <abbr>WCAG</abbr> 2.1?</a>,
             <i class="website">Level Access</i>, 27.06.2018.
           </li>
+          <li>Onsman, Ricky:
+            <a href="http://intopia.digital/articles/intopia-launches-wcag-2-1-map/">Intopia Launches <abbr>WCAG</abbr> 2.1 Map</a>,
+            <i class="website">Intopia</i>, 26.07.2018.
+            <!--@@download map-->
+          </li>
         </ul>
         <br />The following blog posts, articles and resources were written or
         created while <abbr>WCAG</abbr> was still under development:
