--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -238,6 +238,14 @@
         <a href="https://www.w3.org/TR/WCAG-EM/">Website Accessibility Conformance Evaluation Methodology (<abbr>WCAG-EM</abbr>) 1.0</a>:
         <abbr>W3C</abbr> Working Group Note 10 July 2014.
       </li>
+      <li><abbr>CEN</abbr>, <abbr>CENELEC</abbr>, <abbr>ETSI</abbr>:
+        <a href="https://www.etsi.org/deliver/etsi_en/301500_301599/301549/02.01.02_60/en_301549v020102p.pdf"><abbr>EN</abbr> 301 549 V2.1.2 (2018-08):
+        Accessibility requirements for <abbr>ICT</abbr> products and services</a>.
+        This document is an update of
+        <a href="https://www.etsi.org/deliver/etsi_en/301500_301599/301549/01.01.02_60/en_301549v010102p.pdf"><abbr>EN</abbr> 301 549 V1.1.2 (2015-04):
+        Accessibility requirements suitable for public procurement of <abbr>ICT</abbr> products and services in Europe</a>
+        which adopts <abbr>WCAG</abbr> 2.1.
+      </li>
       <li><abbr>W3C</abbr>:
         <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
         Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
