Mandate 376: EN 301 549: Accessible ICT Procurment Toolkit

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -255,6 +255,10 @@
             <a href="https://accessible-techcomm.org/learn-about-en-301549-from-funka/">Learn about <abbr>EN</abbr> 301 549 from Funka</a>,
             <i class="website">Accessible TechComm</i>, July 2016.
           </li>
+          <li>
+            <a href="http://mandate376.standards.eu/standard">Standard - <abbr>EN</abbr> 301 549: Accessible <abbr>ICT</abbr> Procurement Toolkit</a>.
+          </li>
+          <!--"Guidance for application of the Accessibility Standard EN 301 ...": https://www.pts.se/globalassets/startpage/dokument/icke-legala-dokument/rapporter/2016/ovrigt/guidance-for-the-accessibility-standard-en-301-5491.pdf -->
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
