--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -176,6 +176,11 @@
         German blog about <abbr>PDF</abbr> accessibility.
         <!--@@list individual blog posts-->
       </li>
+      <li>
+        <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
+        a <abbr>PDF</abbr> generation library for Java and .NET.
+        It supports <abbr>PDF XA</abbr> and can convert <abbr>PDF</abbr> to <abbr>HTML</abbr>.
+      </li>
     </ul>
 
 
