UX SE: What video players/sites are fully accessible?

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -409,6 +409,13 @@
         <i class="proceedings"><!--@@class-->International Conference on Computers Helping People with Special Needs (<abbr>ICCHP</abbr>) 2018</i>.
         <br />Results of a series of tests of 37 major video players, including YouTube embed, Vimeo, JW Player, Plyr and Video.js; only AblePlayer and OzPlayer pass all the tests.
       </li>
+      <li>
+        <a href="https://ux.stackexchange.com/q/3031/91974">What video players/sites are fully accessible?</a>
+        A question posted on User Experience Stack Exchange in January 2011;
+        the answer posted in in 2011 Easy YouTube, which is no longer being maintained,
+        and the Vimeo player.
+        <!--@@post answer based on research-->
+      </li>
     </ul>
     <!--
     <ul>
