UX SE: Accessibility for non-web applications

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1166,6 +1166,16 @@
         <a href=""></a>
       </li>
       -->
+      <li>
+        <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
+        a question posted on User Experience Stack Exchange in May 2012.
+        <!--@@post answer based on WCAG2ICT: https://www.w3.org/WAI/standards-guidelines/wcag/non-web-ict/ & https://www.w3.org/TR/wcag2ict/
+          ISO 13066:
+          ISO/IEC-13066-2 › Information technology - Interoperability with assistive technology (AT) - Part 2: Windows accessibility application programming interface (API): https://www.document-center.com/standards/show/ISO/IEC-13066-2
+          ISO/IEC TR 13066-2:2016(en): Information technology — Interoperability with assistive technology (AT) — Part 2: Windows accessibility application programming interface (API): https://www.iso.org/obp/ui/#iso:std:iso-iec:tr:13066:-2:ed-2:v1:en
+          ISO/IEC TR 13066-4:2015: Information technology -- Interoperability with assistive technology (AT) -- Part 4: Linux/UNIX graphical environments accessibility API: https://www.iso.org/standard/54001.html
+        -->
+      </li>
     </ul>
 
   </main>
