--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -262,6 +262,10 @@
         <a href="https://www.youtube.com/watch?v=xrqdU4cZaLw">Making Games Better for Gamers with Colourblindness &amp; Low Vision | Designing for Disability</a>
         (Mark Brown on YouTube, 14 minutes, 22.08.2018).
       </li>
+      <li>
+        <a href="https://docs.microsoft.com/en-us/windows/uwp/gaming/accessibility-for-games">Making games accessible</a>,
+        <i class="website">Microsoft Dev Center</i>, 11.09.2017.
+      </li>
     </ul>
 
 
