Feigenbaum and Nichols

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -83,18 +84,24 @@
     </ul>
 
     <h3>Java: Other</h3>
-    <p>The <a href="https://github.com/able-to-include/accessibility-layer-sdk-java">Able to Include Accessibility Layer</a>
-      for Java is available under the Apache License, Version 2.0 and
-      enables applications to work wit the 
-      <a href="https://github.com/able-to-include/accessibility-layer">Able to Include context-aware accessibility layer</a>,
-      which was developed to
-      <q cite="https://github.com/able-to-include/accessibility-layer">improve the day-to-day life of people with IDD by understanding their surroundings and helping them to interact with the information society</q>.
-      <br />See also the 
-      <a href="http://al.abletoinclude.eu/doc/">Accessibility Layer <abbr>API</abbr> documentation</a>.
-      These tools were developed by the 
-      <strong><a href="http://cordis.europa.eu/project/rcn/191830_en.html">Able to Include</a></strong> project,
-      which ran from March 2014 till February 2017.
-    </p>
+    <ul>
+      <li>The <a href="https://github.com/able-to-include/accessibility-layer-sdk-java">Able to Include Accessibility Layer</a>
+        for Java is available under the Apache License, Version 2.0 and
+        enables applications to work wit the
+        <a href="https://github.com/able-to-include/accessibility-layer">Able to Include context-aware accessibility layer</a>,
+        which was developed to
+        <q cite="https://github.com/able-to-include/accessibility-layer">improve the day-to-day life of people with IDD by understanding their surroundings and helping them to interact with the information society</q>.
+        <br />See also the
+        <a href="http://al.abletoinclude.eu/doc/">Accessibility Layer <abbr>API</abbr> documentation</a>.
+        These tools were developed by the
+        <strong><a href="http://cordis.europa.eu/project/rcn/191830_en.html">Able to Include</a></strong> project,
+        which ran from March 2014 till February 2017.
+      </li>
+      <li>Feigenbaum, Barry; Nichols, Sueann:
+        <a href="https://www.ibm.com/developerworks/community/wikis/home?lang=en#!/wiki/W10ef84c59396_40fb_aa66_a05ad699cda6/page/Accessibility%20Design%20and%20Coding%20Guidelines%20for%20Java%20Swing%20and%20SWT%20GUI%20Development">Accessibility Design and Coding Guidelines for Java Swing and <abbr>SWT</abbr> <abbr>GUI</abbr> Development</a>,
+        <i class="website"><abbr>IBM</abbr> Community</i>.
+      </li>
+    </ul>
 
     <h2>Qt</h2>
     <ul>
